# tg-sender-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260502_0001_multi_tenant_schema.py
tests/: test_access.py  test_config.py  test_db.py  test_manager_keyboards.py  test_repositories.py  test_scheduler.py  test_sender_scheduler.py  test_source_parser.py
tg_spam_agent/: cli.py  config.py  db.py  models.py  repositories.py
tg_spam_agent/manager/: __init__.py  app.py  i18n.py  keyboards.py
tg_spam_agent/sender/: __init__.py  app.py  auth.py
tg_spam_agent/services/: access.py  broadcast.py  crypto.py  datetime_utils.py  debug_notifications.py  notifications.py  scheduler.py  source_parser.py
