[project]
name = "tg-spam-agent"
version = "0.1.0"
description = "Telethon sender userbot with Telegram manager bot"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram>=3.7,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.30,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "python-dotenv>=1.0,<2.0",
    "telethon>=1.36,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[project.scripts]
tg-spam-agent = "tg_spam_agent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["."]
